<resources>
    <string name="app_name">Wordgasm</string>
    <string name="admob_app_id">ca-app-pub-8836857050636822~5270734017</string>

    <string name="helper_text">Guess the word!</string>
    <string name="score">Score:</string>
    <string name="high_score">High Score:</string>
    <string name="go">GO!</string>
    <string name="pa">Play Again</string>
    <string name="hint">Hint</string>


</resources>
