<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/tool_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helper_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBar"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_guess"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_word"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimaryDark"
        app:boxCornerRadiusBottomEnd="0dp"
        app:boxCornerRadiusBottomStart="0dp"
        app:boxCornerRadiusTopEnd="0dp"
        app:boxCornerRadiusTopStart="0dp"
        app:helperTextEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_guess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/text_color" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_guess"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/l_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5sp"
                android:text="@string/score"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_hscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_hscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5sp"
                android:text="@string/high_score"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/hscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_score">

        <Button
            android:id="@+id/bt_check"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp"
            android:text="@string/go"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_new"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:drawableStart="@drawable/ic_refresh"
            android:drawableLeft="@drawable/ic_refresh"
            android:padding="10dp"
            android:text="@string/pa"
            android:textColor="@android:color/white"
            android:visibility="gone" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:src="@drawable/ic_wb"
        android:tint="@color/colorPrimary"
        app:backgroundTint="@android:color/white"
        app:elevation="5dp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fab"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="37.5sp"
        android:layout_marginRight="37.5sp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hint"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

</RelativeLayout>